DROP DATABASE IF EXISTS asheville;
CREATE DATABASE asheville;

CREATE OR REPLACE FUNCTION set_updated_at()
RETURNS trigger AS $$
BEGIN
  NEW.updated_at = now();
  RETURN NEW;
END;
$$ LANGUAGE plpgsql;

CREATE TABLE beekeeper (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  username VARCHAR(50) NOT NULL,
  password_hash VARCHAR(255) NOT NULL,
  email VARCHAR(254) NOT NULL,
  phone VARCHAR(32),
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT uq_beekeeper_username UNIQUE (username),
  CONSTRAINT uq_beekeeper_email UNIQUE (email)
);

CREATE TABLE location (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name VARCHAR(120),
  lat DOUBLE PRECISION NOT NULL,
  lon DOUBLE PRECISION NOT NULL,
  lat_e6 INTEGER GENERATED ALWAYS AS (round(lat * 1000000)::int) STORED,
  lon_e6 INTEGER GENERATED ALWAYS AS (round(lon * 1000000)::int) STORED,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT uq_location_lat_lon_e6 UNIQUE (lat_e6, lon_e6)
);

CREATE TABLE hive (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  beekeeper_id BIGINT NOT NULL,
  location_id BIGINT,
  name VARCHAR(100) NOT NULL,
  notes TEXT,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT fk_hive_beekeeper
    FOREIGN KEY (beekeeper_id)
    REFERENCES beekeeper (id)
    ON DELETE CASCADE,
  CONSTRAINT fk_hive_location
    FOREIGN KEY (location_id)
    REFERENCES location (id)
    ON DELETE RESTRICT
);

CREATE INDEX idx_hive_beekeeper_id
  ON hive (beekeeper_id);

CREATE INDEX idx_hive_location_id
  ON hive (location_id);

CREATE TABLE device (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  hive_id BIGINT NOT NULL,
  installed_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  last_seen_at TIMESTAMPTZ,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT fk_device_hive
    FOREIGN KEY (hive_id)
    REFERENCES hive (id)
    ON DELETE CASCADE,
  CONSTRAINT uq_device_hive_id UNIQUE (hive_id)
);

CREATE INDEX idx_device_last_seen_at
  ON device (last_seen_at);

CREATE TABLE reading (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  device_id BIGINT NOT NULL,
  bucket_at TIMESTAMPTZ NOT NULL,
  received_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  temperature DOUBLE PRECISION NOT NULL,
  rssi SMALLINT,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT fk_reading_device
    FOREIGN KEY (device_id)
    REFERENCES device (id)
    ON DELETE CASCADE,
  CONSTRAINT uq_reading_device_bucket_at UNIQUE (device_id, bucket_at),
  CONSTRAINT chk_reading_temperature
    CHECK (temperature > -100 AND temperature < 999),
  CONSTRAINT chk_reading_rssi_dbm
    CHECK (rssi IS NULL OR (rssi >= -200 AND rssi <= 0))
);

CREATE INDEX idx_reading_device_bucket_at_desc
  ON reading (device_id, bucket_at DESC);

CREATE INDEX idx_reading_bucket_at_brin
  ON reading USING brin (bucket_at);

CREATE TABLE external_condition (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  location_id BIGINT NOT NULL,
  bucket_at TIMESTAMPTZ NOT NULL,
  fetched_at TIMESTAMPTZ,
  provider VARCHAR(40) NOT NULL,
  status VARCHAR(16) NOT NULL DEFAULT 'pending',
  error_message TEXT,
  temperature DOUBLE PRECISION,
  humidity_pct DOUBLE PRECISION,
  precip_mm DOUBLE PRECISION,
  wind_mps DOUBLE PRECISION,
  wind_gust_mps DOUBLE PRECISION,
  pressure_hpa DOUBLE PRECISION,
  cloud_pct DOUBLE PRECISION,
  raw_json JSONB,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT fk_external_condition_location
    FOREIGN KEY (location_id)
    REFERENCES location (id)
    ON DELETE CASCADE,
  CONSTRAINT uq_external_condition_location_bucket_at UNIQUE (location_id, bucket_at),
  CONSTRAINT chk_external_condition_status
    CHECK (status IN ('pending', 'success', 'failed')),
  CONSTRAINT chk_external_condition_fetched_at
    CHECK (
      (status = 'pending' AND fetched_at IS NULL)
      OR (status IN ('success', 'failed') AND fetched_at IS NOT NULL)
    ),
  CONSTRAINT chk_external_condition_humidity
    CHECK (humidity_pct IS NULL OR (humidity_pct >= 0 AND humidity_pct <= 100)),
  CONSTRAINT chk_external_condition_wind
    CHECK (wind_mps IS NULL OR wind_mps >= 0),
  CONSTRAINT chk_external_condition_wind_gust
    CHECK (wind_gust_mps IS NULL OR wind_gust_mps >= 0),
  CONSTRAINT chk_external_condition_precip
    CHECK (precip_mm IS NULL OR precip_mm >= 0),
  CONSTRAINT chk_external_condition_cloud
    CHECK (cloud_pct IS NULL OR (cloud_pct >= 0 AND cloud_pct <= 100)),
  CONSTRAINT chk_external_condition_pressure
    CHECK (pressure_hpa IS NULL OR pressure_hpa > 0)
);

CREATE INDEX idx_external_condition_location_bucket_at_desc
  ON external_condition (location_id, bucket_at DESC);

CREATE INDEX idx_external_condition_bucket_at_brin
  ON external_condition USING brin (bucket_at);

CREATE TABLE session (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  beekeeper_id BIGINT NOT NULL,
  session_token TEXT NOT NULL CHECK (length(session_token) = 64),
  csrf_token TEXT NOT NULL CHECK (length(csrf_token) = 64),
  active BOOLEAN NOT NULL DEFAULT TRUE,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  expires_at TIMESTAMPTZ NOT NULL,
  last_activity_at TIMESTAMPTZ,
  CONSTRAINT uq_session_session_token UNIQUE (session_token),
  CONSTRAINT uq_session_csrf_token UNIQUE (csrf_token),
  CONSTRAINT fk_session_beekeeper
    FOREIGN KEY (beekeeper_id)
    REFERENCES beekeeper (id)
    ON DELETE CASCADE,
  CONSTRAINT chk_session_expires
    CHECK (expires_at > created_at)
);

CREATE INDEX idx_session_beekeeper_active
  ON session (beekeeper_id, active);

CREATE INDEX idx_session_expires_at
  ON session (expires_at);

CREATE INDEX idx_session_token_active
  ON session (session_token, active);

CREATE TABLE password_reset_token (
  beekeeper_id BIGINT PRIMARY KEY
    REFERENCES beekeeper (id) ON DELETE CASCADE,
  token_hash TEXT NOT NULL,
  expires_at TIMESTAMPTZ NOT NULL,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  consumed_at TIMESTAMPTZ
);

CREATE INDEX idx_password_reset_token_expires_at
  ON password_reset_token (expires_at);

CREATE TRIGGER trg_beekeeper_set_updated_at
BEFORE UPDATE ON beekeeper
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

CREATE TRIGGER trg_location_set_updated_at
BEFORE UPDATE ON location
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

CREATE TRIGGER trg_hive_set_updated_at
BEFORE UPDATE ON hive
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

CREATE TRIGGER trg_device_set_updated_at
BEFORE UPDATE ON device
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

CREATE TRIGGER trg_external_condition_set_updated_at
BEFORE UPDATE ON external_condition
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();